Bug 39742 - DRAW, IMPRESS: Menu 'Tools-Options-DRAW-Print' settings not respected
Summary: DRAW, IMPRESS: Menu 'Tools-Options-DRAW-Print' settings not respected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:6.4.0 target:6.3.1
Keywords:
Depends on:
Blocks: Print-Dialog
  Show dependency treegraph
 
Reported: 2011-08-01 22:42 UTC by Rainer Bielefeld Retired
Modified: 2019-08-02 14:38 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots, pls. see original report! (89.58 KB, application/x-download)
2011-08-01 22:42 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-08-01 22:42:04 UTC
Created attachment 49815 [details]
Screenshots, pls. see original report!

Settings from 'Tools-Options-DRAW-Print' should be used as default settings for print dialog, but they are without influence, see screenshots.

Works fine for Writer (Checkboxes in both dialogs show the same when print)

I see that with  "LibreOffice 3.4.2  - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:203)]" and  
Master "LibO-dev 3.4.5  – WIN7  Home Premium  (64bit) English UI 
[(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]"

Also a problem with LibO Portable 3.3.0 and OOo 3.3, seems to be inherited from OOo, so Version -> first one

Works fine with OOo 3.3.1
Comment 1 André Schnabel 2011-08-02 10:35:39 UTC
confirmed using LibO 3.4.2

Print Dialog for Impress/Draw should respect setting in Tool-Options but actually does not.

regarding comment #0

> 
> Also a problem with LibO Portable 3.3.0 and OOo 3.3, seems to be inherited from
> OOo, so Version -> first one
> 
> Works fine with OOo 3.3.1

did you meand OOo 3.2.1 here? Otherwise I would not understand the "inherited from Ooo" comment
Comment 2 Rainer Bielefeld Retired 2011-08-02 14:09:28 UTC
Mew test, works fine with OOo-Dev 3.2 and OOo 3.3, so my heritage hypothesis really is hazardous, I will check again tomorrow with time and not running several OOo and LibO versions simultaneously.
Comment 3 Björn Michaelsen 2011-12-23 13:24:53 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 4 A (Andy) 2014-03-08 20:44:08 UTC
reproducible with LO 4.2.1.1 (Win 8.1)
Comment 5 Joel Madero 2015-05-02 15:43:40 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2016-09-20 09:37:26 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2019-07-26 08:23:44 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/844be49e7e511f0c397e1faebca10b4fa25ea937%5E%21

tdf#39742 tdf#44786 Consider Impress/Draw default printing settings

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-08-02 14:38:37 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/c542a385ce100f8f52a4aff6ab12312f9fbb674e%5E%21

tdf#39742 tdf#44786 Consider Impress/Draw default printing settings

It will be available in 6.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.