tdf#39742 tdf#44786 Consider Impress/Draw default printing settings

Default settings can be set under Options - APP - Print but
Impress/Draw has not used these as defaults unlike other apps

Change-Id: I7d430f8fb24f9626cd628b4fe9e0520d9d42b848
Reviewed-on: https://gerrit.libreoffice.org/76079
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>